--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,16 @@ header{
   background: url(../images/footerBG.jpg);
 }
 
+header a,h1{
+  text-transform: uppercase;
+}
+
 .navi li{
   display: inline;
 }
 
 .navi a{
+  padding-top: 20px;
   text-decoration: none;
   color: #003300;
   font-family: broadway;
@@ -35,28 +40,13 @@ header{
   font-size: 26px;
   font-weight: bold;
   color: #eeffcc;
+  text-transform: uppercase;
 }
 
 .banner p{
   font-family: monospace;
   font-size: 14px;
   color: #eeffcc;
-}
-
-.trek{
-  opacity: 0.8;
-}
-
-.trek:hover{
-  opacity: 1.0;
-  filter: alpha(opacity=100);
-}
-
-.a{
-  font-size: 20px;
-  font-weight: bold;
-  font-family: Broadway;
-  color: navy blue;
 }
 
 .styl{
@@ -129,11 +119,17 @@ header{
 .txt{
   text-align: justify;
   font-size: 16px;
-  font-family: monospace;
+  font-family: Georgia;
 }
 
 .headwhy{
   font-family: Broadway;
+  text-transform: uppercase;
+}
+
+.subheader{
+  text-transform: uppercase;
+  font-size: 20px;
 }
 
 .ser{
@@ -145,6 +141,7 @@ header{
   padding-top: 100px;
   font-family: Broadway;
   font-size: 32px;
+  text-transform: uppercase;
 }
 
 .process1{
@@ -153,27 +150,34 @@ header{
   width: 430px;
   opacity: 0.6;
   filter: alpha(opacity=40);
+  text-align: center;
 }
+
 .process2{
   background: url(../images/process2.jpg);
   height: 668px;
   width: 430px;
   opacity: 0.6;
   filter: alpha(opacity=40);
+    text-align: center;
 }
+
 .process3{
   background: url(../images/process3.jpg);
   height: 668px;
   width: 430px;
   opacity: 0.6;
   filter: alpha(opacity=40);
+    text-align: center;
 }
+
 .process4{
   background: url(../images/process4.jpg);
   height: 668px;
   width: 430px;
   opacity: 0.6;
   filter: alpha(opacity=40);
+    text-align: center;
 }
 
 .process{
@@ -206,6 +210,19 @@ header{
 }
 
 .top{
-  padding-left: 50px;
-  padding-top: 300px;
+  text-decoration: none;
+  font-family: Broadway;
+  font-size: 40px;
+  color: #003300;
+  background-color: #eeffee;
+}
+
+.a{
+  text-decoration: none;
+  font-size: 20px;
+  text-transform: uppercase;
+  color:  #003300;
+  font-family: broadway;
+  background-color: #eeffcc;
+  float:
 }
